// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker component tests should render 1`] = `
.c1 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c1 * {
  height: inherit;
  width: inherit;
}

.c2 {
  margin-left: 5px;
}

.c2:hover {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 5px;
  width: auto;
}

<div
  class="react-datepicker-wrapper"
>
  <div
    class="react-datepicker__input-container"
  >
    <div
      class="c0"
      width="auto"
    >
      2018/11/11
      <span
        class="c1 c2"
        data-testid="svg-icon"
      >
        <svg>
          calendar.svg
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`DatePicker component tests should render 2`] = `
<div
  class="react-datepicker-wrapper"
>
  <div
    class="react-datepicker__input-container"
  >
    <div
      class="sc-chbbiW LdUeS"
      width="auto"
    >
      2018/11/11
      <span
        class="sc-fjdhpX eWPlQv sc-jzJRlG lcpYA sc-hzNEM fqfZrC"
        data-testid="svg-icon"
      >
        <svg>
          calendar.svg
        </svg>
      </span>
    </div>
  </div>
</div>
`;
